Util to generateId, remove extra userEmail args (#999)