@@ -112,10 +112,7 @@ public class ReviewService {
       throw new IllegalArgumentException("Cannot create a review with an empty query result");
     }
     reviewDao.createReview(
-        cohortId,
-        reviewBuilder.createdBy(userEmail).lastModifiedBy(userEmail).build(),
-        primaryEntityIds,
-        cohortRecordsCount);
+        cohortId, reviewBuilder.createdBy(userEmail).build(), primaryEntityIds, cohortRecordsCount);
     Review review = reviewDao.getReview(reviewBuilder.getId());
     activityLogService.logReview(
         ActivityLog.Type.CREATE_REVIEW, userEmail, studyId, cohortId, review);
@@ -455,7 +452,7 @@ public class ReviewService {
                 /* limit= */ Integer.MAX_VALUE)
             .stream()
             .sorted(Comparator.comparing(AnnotationKey::getDisplayName))
-            .collect(Collectors.toList());
+            .toList();
     annotationKeys.forEach(
         annotation ->
             columnHeaders.append(
